fixed z-index issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,7 +65,3 @@ main {
 #info-card{
     z-index: -1;
 }
-
-.project-card {
-    z-index: -1;
-}
